# docpixie

./: .gitignore  CLAUDE.md  DOCPIXIE_BACKEND_ARCHITECTURE.md  DOCPIXIE_IMPLEMENTATION_PLAN.md  DOCPIXIE_OPENSOURCE_ARCHITECTURE.md  LICENSE  MANIFEST.in  README.md  docpixie-cli.py  pyproject.toml  requirements.txt  setup.py  test_docpixie_debug.py
docpixie/: __init__.py  cli.py  docpixie.py  exceptions.py
docpixie/ai/: __init__.py  agent.py  context_processor.py  page_selector.py  prompts.py  query_classifier.py  query_reformulator.py  summarizer.py  synthesizer.py  task_planner.py
docpixie/cli/: __init__.py  app.py  commands.py  config.py  conversation_storage.py  docpixie_manager.py  event_handlers.py  legacy.py  state_manager.py  styles.py  task_display.py
docpixie/cli/widgets/: __init__.py  chat_area.py  command_palette.py  conversation_list.py  conversation_manager.py  document_manager.py  model_selector.py
docpixie/core/: __init__.py  config.py  utils.py
docpixie/models/: __init__.py  agent.py  document.py
docpixie/processors/: __init__.py  base.py  factory.py  image.py  pdf.py
docpixie/providers/: __init__.py  anthropic.py  base.py  factory.py  openai.py  openrouter.py
docpixie/storage/: __init__.py  base.py  local.py  memory.py
docpixie/utils/: __init__.py  async_helpers.py
docs/: agent.md  cli-tool.md  configuration.md  document-processing.md  getting-started.md  models_and_providers.md  quickstart.md  storage.md
examples/: __init__.py  basic_usage.py
tests/: __init__.py  test_agent_e2e.py  test_basic.py
