[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docpixie"
version = "0.1.0"
description = "A lightweight, vision-based document question-answering system"
readme = "README.md"
license = "MIT"
authors = [
    {name = "DocPixie Team"},
]
maintainers = [
    {name = "DocPixie Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "Pillow>=10.0.0",
    "PyMuPDF>=1.23.0",
    "openai>=1.0.0",
    "anthropic>=0.10.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/docpixie/docpixie"
Documentation = "https://github.com/docpixie/docpixie#readme"
Repository = "https://github.com/docpixie/docpixie.git"
Issues = "https://github.com/docpixie/docpixie/issues"

[project.scripts]
docpixie = "docpixie.cli:main"

[tool.setuptools]
packages = ["docpixie", "docpixie.ai", "docpixie.core", "docpixie.models", "docpixie.processors", "docpixie.providers", "docpixie.storage", "docpixie.utils"]

[tool.setuptools.package-data]
docpixie = ["py.typed"]